my third commit

--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,15 @@ div li {
   font-weight: bold;
   color: #4e47ff;
 }
+/* banner */
+.banner {
+  text-align: center;
+  margin-top: 170px;
+}
+.banner-content {
+  font-size: 65px;
+  font-weight: bold;
+}
 /* shared styles */
 .btn {
   font-size: 16px;
@@ -29,6 +38,20 @@ div li {
   padding: 12px 36px;
   border: none;
 }
+.btn-2 {
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 7px;
+  background-color: #4e47ff;
+  color: #ffffff;
+  padding: 12px 36px;
+  border: none;
+  margin-top: 37px;
+}
+.black-colour {
+  color: #252432;
+}
+
 .header {
   background-image: url(../Assets/Hero-bg.png);
   background-repeat: repeat;
