--- a/styles/style.css
+++ b/styles/style.css
@@ -99,10 +99,37 @@
   justify-content: space-between;
   align-items: center;
   margin: 150px 0px 0px 140px;
-
-  /* margin: 170px 150px; */
 }
-/* main {
+/* productive users */
+.stat-item {
+  font-size: 80px;
+  font-weight: bold;
+  color: rgba(78, 71, 255, 1);
+}
+.stat-des {
+  font-size: 20px;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.5);
+}
+.stat-title {
+  font-size: 38px;
+  font-weight: bold;
+  color: #252432;
+}
+.sec-bg {
+  border-radius: 24px;
+  background-color: rgba(78, 71, 255, 0.1);
+}
+.stat {
+  border-radius: 24px;
+  text-align: center;
+  padding: 50px 142px;
+  margin: 116px auto;
+  max-width: 1140px;
+}
+.items {
   display: flex;
-  justify-content: center;
-} */
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 40px;
+}
