--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@
 .background {
   background-image: url(../Assets/Hero-bg.png);
   background-repeat: no-repeat;
-  max-width: 1440px;
+  /* max-width: 1440px; */
 }
 /* nav styles */
 .black-color {
@@ -132,4 +132,42 @@
   align-items: center;
   justify-content: space-around;
   margin-top: 40px;
+}
+/* Review styles */
+.review-header {
+  font-size: 42px;
+  font-weight: bold;
+  text-align: center;
+}
+.upper-img {
+  max-width: 40px;
+}
+.three {
+  margin-top: 24px;
+}
+.para {
+  color: rgba(30, 30, 30, 1);
+  margin-top: 8px;
+}
+.lower-img {
+  margin-top: 24px;
+}
+.review-parent {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-top: 50px;
+  justify-content: center;
+}
+.r-container {
+  padding: 30px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.lower-img {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.bogas {
+  color: rgba(117, 117, 117, 1);
 }
