--- a/styles/style.css
+++ b/styles/style.css
@@ -11,25 +11,37 @@
   box-sizing: border-box;
 }
 /* header background */
-.background {
+.hero-section {
   background-image: url(../Assets/Hero-bg.png);
   background-repeat: no-repeat;
-  /* max-width: 1440px; */
+  width: 100%;
+  height: 663px;
+  background-size: cover;
+  background-position: center;
+  position: relative;
 }
+.container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
 /* nav styles */
 .black-color {
   color: #252432;
 }
-.nav {
+.parent {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 120px;
+  padding: 30px 60px;
 }
+
 .logo {
   font-size: 34px;
   font-weight: bold;
   color: #4e47ff;
+  margin: 0;
 }
 .btn {
   font-size: 16px;
@@ -39,12 +51,12 @@
   color: #ffffff;
   padding: 12px 36px;
   border: none;
-  margin-top: 37px;
 }
 /* banner */
 .banner-content {
   font-size: 65px;
   font-weight: bold;
+  margin-top: 157px;
 }
 .btn-2 {
   font-size: 16px;
@@ -57,13 +69,17 @@
   margin-top: 37px;
 }
 .banner-container {
-  max-width: 905px;
-}
-.banner {
   text-align: center;
   display: flex;
-  justify-content: center;
-  margin: 80px;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 100%;
+  align-items: center;
+  padding-bottom: 250px;
+}
+
+.banner {
+  height: 100%;
 }
 /* action */
 .action-tile {
@@ -93,12 +109,13 @@
 }
 .action-content {
   max-width: 1140px;
+  gap: 220px;
 }
 .action-contain {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 150px 0px 0px 140px;
+  margin: 177px 159px 116px 141px;
 }
 /* productive users */
 .stat-item {
